# FrameExtractor

./: CMakeLists.txt  README.md
include/extractor/: extractor.h  file_helper.h  gapstat.h  hist_opencv.h  image_metric.h  shot_range.h  sort.h  video_parser.h
src/: extractor.cpp  video_parser.cpp
